单元测试，日志优化
单元测试，日志优化
