# api/openapi/order.yml
@@ -30,7 +30,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Order'
+                $ref: '#/components/schemas/Responses'
         default:
           description: todo
           content:
@@ -57,7 +57,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Order'
+                $ref: '#/components/schemas/Responses'
         default:
           description: todo
           content:
@@ -137,3 +137,21 @@ components:
         quantity:
           type: integer
           format: int32
+    
+    Responses:
+      type: object
+      properties:
+        errno:
+          type: integer
+        message:
+          type: string
+        data:
+          type: object
+        trace_id :
+          type: string
+      required:
+        - errno
+        - message
+        - data
+        - trace_id
+
